# baza

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: Release.md
.github/workflows/: ci.yml
api/s3/: Cargo.toml
api/s3/src/: lib.rs
e2e/: Cargo.toml
e2e/src/: lib.rs  s3.rs
e2e/tests/: main.rs
e2e/tests/s3/: get_object.feature  mod.rs  put_object.feature
helm/: baza-0.1.0.tgz  baza-0.1.1.tgz  baza-0.2.0.tgz  baza-0.3.0.tgz  baza-0.4.0.tgz  baza-0.4.1.tgz  baza-0.4.2.tgz  baza-0.5.0.tgz  index.yaml
helm/baza/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
helm/baza/templates/: NOTES.txt  _helpers.tpl  configmap.nginx.yaml  ingress.yaml  nginx.configmap.yaml  pvc.yaml  secret.env.yaml  secret.registry.yaml  service.yaml  statefulset.yaml
lib/: Cargo.toml
lib/src/: lib.rs
src/: main.rs
