[package]
name = "baza"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Simply scalable files storage without much fuss."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
homepage = "https://github.com/instrumentisto/baza"
repository = "https://github.com/instrumentisto/baza"
publish = false

[profile.release]
lto = "thin"
codegen-units = 1
[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
baza = { package = "baza-lib", path = "lib" }
baza-api-s3 = { path = "api/s3" }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
secrecy = "0.8"
tokio = "1"
tracing-subscriber = "0.3"

[workspace]
members = [
    "api/s3",
    "e2e",
    "lib",
]
