[package]
name = "baza-lib"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "Actual Baza implementation as library."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
publish = false

[dependencies]
async-fs = "2.1"
async-trait = "0.1"
derive_more = { version = "2", features = ["display", "error"] }
futures = "0.3"
tracerr = "0.4"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
