[package]
name = "baza-api-s3"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
description = "S3 HTTP API implementation of Baza."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
publish = false

[dependencies]
baza = { package = "baza-lib", path = "../../lib" }
derive_more = { version = "1", features = ["display", "error", "from"] }
hyper = "0.14"
s3-server = "0.2"
secrecy = "0.8"
tokio-util = { version = "0.7", features = ["io", "compat"] }
