[package]
name = "baza-api-s3"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "S3 HTTP API implementation of Baza."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
publish = false

[dependencies]
baza = { package = "baza-lib", path = "../../lib" }
derive_more = { version = "2", features = ["display", "error", "from"] }
hyper = "0.14"
s3-server = "0.2"
secrecy = "0.10"
tokio-util = { version = "0.7", features = ["io", "compat"] }
